# CFA-Telegram-Chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: sample_timeline.csv  sample_timeline.json  seed_vocab.json
scripts/: import_timeline.py  init_db.py  seed_data.py
src/cfa_vocab_bot/: __init__.py  __main__.py  admin_api.py  bot.py  config.py  db.py  jobs.py  logging_config.py  models.py  scheduler.py  schemas.py
src/cfa_vocab_bot/services/: __init__.py  content_engine.py  duplicate.py  export.py  importers.py  learning_settings.py  llm.py  privacy.py  progress.py  quiz.py  research.py  scheduling.py  seed.py  spaced_repetition.py  subtopics.py  topics.py  users.py
src/cfa_vocab_bot/telegram/: __init__.py  formatters.py  handlers.py  keyboards.py
tests/: conftest.py  test_alert_jobs.py  test_content_engine.py  test_duplicates.py  test_import_export.py  test_learning_settings.py  test_quiz.py  test_research.py  test_scheduling.py  test_spaced_repetition.py  test_start_welcome.py  test_subtopics.py  test_topics.py
