[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfa-vocab-bot"
version = "0.1.0"
description = "Telegram chatbot for CFA Level I vocabulary learning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CFA Vocab Bot Contributors" }]
dependencies = [
  "APScheduler>=3.10,<4.0",
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "python-telegram-bot>=21.4,<22.0",
  "SQLAlchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
cfa-vocab-bot = "cfa_vocab_bot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
